lecture10/wrightFisher.css
.form-element label {
  display: inline-block;
  width: 300px;
  text-align: right;
}​

